--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,6 +1,7 @@
 
 body {
   background-color: lightblue;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1 {
@@ -9,7 +10,7 @@ h1 {
 }
 
 p {
-  font-family: verdana;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
 }
 
