--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,9 +2,10 @@
 body {
   background-color: lightblue;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 80%;
 }
 
-h1 {
+h1,h2 {
   color: white;
   text-align: center;
 }
@@ -12,5 +13,30 @@ h1 {
 p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 20px;
+  padding-left: 20px;
+}
+ul {
+  list-style-type: none;
+  align: center;
+  height: 40px;
+  background-color: #f1f1f1;
+  position: fixed; /* Make it stick, even on scroll */
+  overflow: hidden; /*in case content overflows*/
+}
+li {
+  float: left;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+li a {
+  display: block;
+  color: #000;
+  padding: 8px;
+  text-decoration: none;
 }
 
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
+}
