--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -41,6 +41,10 @@ body {
   overflow: hidden;
 }
 
+.sub__elem {
+  display: inline-block;
+}
+/* 
 h1,h2 {
   color: white;
   text-align: center;
@@ -63,10 +67,10 @@ li a {
   color: #000;
   padding: 8px;
   text-decoration: none;
-}
+} */
 
 /* Change the link color on hover */
-li a:hover {
+/* li a:hover {
   background-color: #555;
   color: white;
-}
+} */
