--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,45 +2,93 @@ body {
   background-color: lightblue;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   width: 100%;
-  margin: 0 0 0 0;
 }
 
 .header {
-  width: 100%;
+  width: 100vw;
   margin: 0;
-}
-
-.header__inner {
-  width: 100%;
-  margin: 0;
+  z-index:1;
+  position:fixed;
+  overflow:hidden;
+  font-size: 0.5vw;
+  vertical-align: middle;
+  top:0;
+  left:0;
+  padding:0;
 }
 
 .header__inner--top {
   text-align: center;
   background-image: url("../images/ilya-pavlov-OqtafYT5kTw-unsplash.jpg");
   background-size: 100%;
-  box-sizing: border-box;
-  height: 100px;
+  height:100px;
+  width:100vw;
+  top:0;
+  padding:0;
+  border: 0;
+  margin:0;
+  display:inline-block;
 }
 
 .header__title {
-  font-size: 30px;
-  left: 50%;
-  margin: 0;
-  top: 50%;
+  font-size: 40px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top:20px;
 }
 
-.header__inner--bottom {
+.navbar{
+  width: 100%;
+  z-index:3;
+  position:fixed;
+  overflow:hidden;
+  font-size: 0.5vw;
+  vertical-align: middle;
+  top:100px;
+  left:0;
+  vertical-align: middle;
 
 }
+
 
 .header__subtitles {
   list-style-type: none;
-  height: 40px;
+  height: 50px;
   background-color: #f1f1f1;
   overflow: hidden;
+  width:100%;
+  margin:0;
+
+}
+.header__subtitles a {
+  display: block;
+  color: #000;
+  padding: 5px 10px 0px;
+  text-decoration: none;
+  float: left;
+  width:15%;
+  font-size:16px;
+  text-align: center;
 }
 
+/* Change the link color on hover */
+.header__subtitles a:hover {
+  background-color: #555;
+  color: white;
+  height:50px;
+}
+.content{
+  margin-top:150px;
+  width: 90%;
+  margin-left:auto;
+  margin-right:auto;
+}
+.content__para{
+  background-color: #f1f1f1;
+  width: 95wv;
+  padding: 5px;
+  margin: 5px;
+}
 h1,h2 {
   color: white;
   text-align: center;
@@ -48,25 +96,18 @@ h1,h2 {
 
 p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 20px;
-  padding-left: 20px;
+  text-align: justify;
+  width:80vw;
+  font-size:16px;
 }
 
-li {
+/*li {
   float: left;
-  padding-left: 50px;
-  padding-right: 50px;
-  
-}
-li a {
-  display: inline-block;
-  color: #000;
-  padding: 8px;
-  text-decoration: none;
-}
+  width:20%;
+  font-size:16px;
+  text-align:center;
+}*/
 
-/* Change the link color on hover */
-li a:hover {
-  background-color: #555;
-  color: white;
+table,th,td {
+  border: 1px solid black;
 }
