--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -8,10 +8,8 @@ body {
 body section {
   margin: auto;
   max-width: 1290px;
-  padding: 0 30px;
+  padding: 0 30px 40px;
 }
-
-
 
 .header {
   width: 100%;
@@ -28,12 +26,6 @@ body section {
     display: none !important;
   }
 }
-
-/* @media screen and (max-width: 768px) and (min-width:300px) {
-  .header__inner--top {
-    display: inline-block !important;
-  }
-} */
 
 @media screen and (max-width: 1366px) and (min-width:767px) {
   .header__inner--top h2 {
@@ -109,13 +101,6 @@ body section {
   justify-content: center;
   display: flex;
 }
-/* 
-@media screen and (max-width: 768px) and (min-width:300px) {
-  .sub__elem a {
-    padding: 0 2px;
-    font-size: 10px;
-  }
-} */
 
 .sub__elem a {
   text-decoration: none;
@@ -134,33 +119,7 @@ li {
   padding: 10px 0;
 }
 
-/* 
-h1,h2 {
-  color: white;
-  text-align: center;
-}
-
-p {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 20px;
-  padding-left: 20px;
-}
-
-li {
-  float: left;
-  padding-left: 50px;
-  padding-right: 50px;
-  
-}
-li a {
-  display: inline-block;
-  color: #000;
-  padding: 8px;
+.announcement__elem a {
   text-decoration: none;
-} */
-
-/* Change the link color on hover */
-/* li a:hover {
-  background-color: #555;
-  color: white;
-} */
+  color: lightcoral;
+}
