--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -94,6 +94,27 @@ body section {
   margin-bottom: unset;
 }
 
+.footer {
+  width: 100%;
+  margin: 0;
+}
+
+.footer__inner {
+  text-align: center;
+  background-size: 100%;
+  background-color: azure;
+  opacity: 0.5;
+  box-sizing: border-box;
+  height: 50px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+.footer__inner:hover {
+  opacity: 0.8;
+}
+
 .sub__elem {
   padding: 10px;
   transition-duration: 0.6s;
