--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,34 +2,35 @@ body {
   background-color: lightblue;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   width: 100%;
+  margin: 0;
 }
 
 body section {
   margin: auto;
   max-width: 1290px;
-  padding: 0 30px 40px;
+  padding: 30px;
 }
 
 .header {
   width: 100vw;
   margin: 0;
-  z-index:1;
-  position:fixed;
-  overflow:hidden;
+  z-index: 1;
+  position: fixed;
+  overflow: hidden;
   font-size: 0.5vw;
   vertical-align: middle;
-  top:0;
-  left:0;
-  padding:0;
+  top: 0;
+  left: 0;
+  padding: 0;
 }
 
-@media screen and (max-width: 768px) and (min-width:300px) {
+@media screen and (max-width: 768px) and (min-width: 300px) {
   .header__inner--top {
     display: none !important;
   }
 }
 
-@media screen and (max-width: 1366px) and (min-width:767px) {
+@media screen and (max-width: 1366px) and (min-width: 767px) {
   .header__inner--top h2 {
     font-size: 50px !important;
   }
@@ -75,7 +76,6 @@ body section {
   /* padding: 0 207px; */
 }
 
-
 .header__subtitles {
   list-style-type: none;
   height: 50px;
@@ -83,40 +83,43 @@ body section {
   overflow: hidden;
   display: flex;
   justify-content: space-around;
+  padding: inherit;
 }
 
-@media screen and (max-width: 768px) and (min-width:300px) {
+@media screen and (max-width: 768px) and (min-width: 300px) {
   .header__subtitles {
     height: 55px !important;
     align-items: center;
   }
 }
 
-
 .header__subtitles li {
   margin-bottom: unset;
 }
 
-
-.content{
-  margin-top:360px;
+.content {
+  margin-top: 360px;
   width: 90%;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-
-@media screen and (max-width: 768px) and  (min-width:300px) {
+@media screen and (max-width: 768px) and (min-width: 300px) {
   .content {
     margin-top: 60px;
   }
 }
 
-.content__para{
+.content__para {
   background-color: #f1f1f1;
   width: 95wv;
-  padding: 5px;
-  margin: 5px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.content__intro {
+  width: 95wv;
+  padding: 0px;
 }
 
 .content__para ul {
@@ -127,7 +130,8 @@ body section {
   padding: 5px;
 }
 
-h1,h2 {
+h1,
+h2 {
   text-align: center;
   background-size: 100%;
   box-sizing: border-box;
@@ -135,6 +139,10 @@ h1,h2 {
   align-items: center;
   display: flex;
   justify-content: center;
+}
+
+h3 {
+  margin: 0px;
 }
 
 .footer {
@@ -161,7 +169,7 @@ h1,h2 {
 .sub__elem {
   padding: 10px;
   transition-duration: 0.6s;
-  
+
   justify-content: center;
   display: flex;
 }
@@ -176,6 +184,12 @@ h1,h2 {
   background-color: #c0c0c0;
 }
 
+@media screen and (max-width: 768px) and (min-width: 300px) {
+  .sub__elem a {
+    font-size: 10px;
+  }
+}
+
 li {
   margin-bottom: 6px;
 }
@@ -184,7 +198,7 @@ li {
   padding: 10px 0;
 }
 
-.announcement__elem a {
+a {
   text-decoration: none;
   color: lightcoral;
 }
@@ -192,10 +206,40 @@ li {
 p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: justify;
-  width:80vw;
-  font-size:16px;
+  width: 100%;
+  font-size: 16px;
 }
 
-table,th,td {
+table,
+th,
+td {
   border: 1px solid black;
 }
+
+td,
+th {
+  padding: 30px;
+  text-align: center;
+}
+
+th {
+  font-size: larger;
+}
+table {
+  margin: 40px 0px 20px;
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) and (min-width: 300px) {
+  tr {
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) and (min-width: 300px) {
+  td,
+  th {
+    padding: 5px;
+  }
+}
+
