--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,3 +1,7 @@
+@import "./header.css";
+@import "./table.css";
+@import "./footer.css";
+
 body {
   background-color: lightblue;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -9,92 +13,6 @@ body section {
   margin: auto;
   max-width: 1290px;
   padding: 30px;
-}
-
-.header {
-  width: 100vw;
-  margin: 0;
-  z-index: 1;
-  position: fixed;
-  overflow: hidden;
-  font-size: 0.5vw;
-  vertical-align: middle;
-  top: 0;
-  left: 0;
-  padding: 0;
-}
-
-@media screen and (max-width: 768px) and (min-width: 300px) {
-  .header__inner--top {
-    display: none !important;
-  }
-}
-
-@media screen and (max-width: 1366px) and (min-width: 767px) {
-  .header__inner--top h2 {
-    font-size: 50px !important;
-  }
-}
-
-.header__inner--top {
-  text-align: center;
-  background-image: url("../images/ilya-pavlov-OqtafYT5kTw-unsplash.jpg");
-  background-size: 100%;
-  box-sizing: border-box;
-  height: 150px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
-.header__logo--left {
-  max-width: 100%;
-  height: auto;
-  width: 100px;
-  left: 100px;
-  padding-right: 50px;
-}
-
-.header__inner--top h2 {
-  margin: 0;
-  font-size: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.header__title {
-  color: white;
-}
-
-.header__title a {
-  margin-top: 50px;
-}
-
-.header__inner--bottom ul {
-  margin-top: 0;
-  /* padding: 0 207px; */
-}
-
-.header__subtitles {
-  list-style-type: none;
-  height: 50px;
-  background-color: #f1f1f1;
-  overflow: hidden;
-  display: flex;
-  justify-content: space-around;
-  padding: inherit;
-}
-
-@media screen and (max-width: 768px) and (min-width: 300px) {
-  .header__subtitles {
-    height: 55px !important;
-    align-items: center;
-  }
-}
-
-.header__subtitles li {
-  margin-bottom: unset;
 }
 
 .content {
@@ -145,51 +63,6 @@ h3 {
   margin: 0px;
 }
 
-.footer {
-  width: 100%;
-  margin: 0;
-}
-
-.footer__inner {
-  text-align: center;
-  background-size: 100%;
-  background-color: azure;
-  opacity: 0.5;
-  box-sizing: border-box;
-  height: 50px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
-.footer__inner:hover {
-  opacity: 0.8;
-}
-
-.sub__elem {
-  padding: 10px;
-  transition-duration: 0.6s;
-
-  justify-content: center;
-  display: flex;
-}
-
-.sub__elem a {
-  font-size: large;
-  text-decoration: none;
-  color: black;
-}
-
-.sub__elem:hover {
-  background-color: #c0c0c0;
-}
-
-@media screen and (max-width: 768px) and (min-width: 300px) {
-  .sub__elem a {
-    font-size: 10px;
-  }
-}
-
 li {
   margin-bottom: 6px;
 }
@@ -209,38 +82,3 @@ p {
   width: 100%;
   font-size: 16px;
 }
-
-table {
-  margin: 40px 0px 20px;
-  width: 100%;
-}
-
-table,
-th,
-td {
-  border: 1px solid black;
-}
-
-td,
-th {
-  padding: 30px;
-  text-align: center;
-}
-
-@media screen and (max-width: 768px) and (min-width: 300px) {
-  td,
-  th {
-    padding: 5px;
-  }
-}
-
-th {
-  font-size: larger;
-}
-
-@media screen and (max-width: 768px) and (min-width: 300px) {
-  tr {
-    font-size: 10px;
-  }
-}
-
