--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -19,6 +19,12 @@ body p, ul {
   font-size: 2vh;
 }
 
+.side {
+  float: right;
+  width: 30%;
+  margin-left: 2vw;
+  margin-right: 2vw;
+}
 
 .content {
   margin-top: 15vw;
